# chatgpt-safe-message-sender

./: .env.example  .gitignore  CODEX.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  smoke.yml
docs/: architecture.md  ci-recovery.md  live-test.md  production-readiness.md  setup.md  test-matrix.md
docs/workflows/: ci.yml  live-smoke.yml
sample_messages/: hello.txt
scripts/: generate_validation_report.py  live_smoke_test.py  mock_openai_server.py  run_local_ci.sh  run_until_green.sh
src/safe_message_sender/: __init__.py  cli.py  client.py
tests/: test_cli.py  test_client.py  test_integration_mock_api.py  test_live_smoke_script.py
